# Interpolator

./: CMakeLists.txt  README.md  interpolator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  tablemodel.cpp  tablemodel.h
